[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/button/StaticBody.gd" type="Script" id=1]
[ext_resource path="res://materials/new_spatialmaterial.tres" type="Material" id=2]
[ext_resource path="res://materials/new_spatialmaterial2.tres" type="Material" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.075, 0.5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 0.15, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.375, 0.1, 0.375 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.375, 0.075, 0.375 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.75, 0.15, 0.75 )

[sub_resource type="Animation" id=6]
resource_name = "down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.115, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "power"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "up"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.115, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "unpower"
} ]
}

[node name="Button" type="StaticBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.075, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.075, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="KinematicBody" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="KinematicBody"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2" type="CollisionShape" parent="KinematicBody/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
shape = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../CollisionShape")
material/0 = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/down = SubResource( 6 )
anims/up = SubResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="body_entered" from="KinematicBody/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="KinematicBody/Area" to="." method="_on_Area_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
